--- a/cookbooks/elk/templates/logstash.yml.erb
+++ b/cookbooks/elk/templates/logstash.yml.erb
@@ -155,7 +155,7 @@ config.reload.interval: <%=@logstash_reload_interval%>
 #   * trace
 #
 # log.level: info
-path.logs: /var/log/logstash
+path.logs: <%=@logstash_logdir%>
 #
 # ------------ Other Settings --------------
 #
